--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "1.0"
 authors = [
   { name="Thiago Santa Clara Pereira", email="strovsk@outlook.com" },
 ]
+keywords = ["logging", "logger", "log", "logs", "drivers"]
 description = "A fast 'read to use' Logging system which provides stdout/file/custom stream with easy syntax and operation. It's a very simple approach of Laravel drivers sorts, by the way, handlers ands drivers are both the same"
 readme = "README.md"
 requires-python = ">=3.7"
