--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,4 +38,5 @@ test = [
 ]
 
 [tool.pdm.scripts]
-test = "pytest -vl"
+"test:unit" = "python -m coverage run --data-file=tests/tmp/coverage/.coverage.unit -m pytest -vl tests/unit --junitxml=tests/tmp/unit_result.xml"
+"test:coverage_report_xml" = "python -m coverage xml --data-file=tests/tmp/coverage/.coverage.unit -o tests/tmp/coverage/coverage.unit.xml"
