build: ensure coverage upload to Codecov runs regardless of previous job status

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
+        if: always()
         with:
           directory: ./tests/tmp/coverage
           env_vars: OS,PYTHON
