--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,7 @@ jobs:
         if: always()
         with:
           directory: ./tests/tmp/coverage
+          slug: Strovsk/EscribaLogger
           env_vars: OS,PYTHON
           fail_ci_if_error: true
           files: ./coverage.unit.xml
