build: fix file path for unit test results in CI workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: ./tests/tmp
-          files: ./unit_result.xml
+          file: ./tests/tmp/unit_result.xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
