--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,10 +18,7 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install pdm
-          pdm install
+      - uses: pdm-project/setup-pdm@v4
 
       - name: Run tests
         run: |
