build: add step to install dependencies in CI workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,9 @@ jobs:
 
       - uses: pdm-project/setup-pdm@v4
 
+      - name: Install dependencies
+        run: pdm install
+
       - name: Run tests
         run: |
           pdm run test:unit
